samples/_failures_safe/1761175853_4bb4ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f244cf1.c: In function ‘main’:
./samples/SAFE/__tmp_4f244cf1.c:113:5: error: expected expression at end of input
  113 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_4f244cf1.c:113:5: error: expected declaration or statement at end of input
